@@ -7,6 +7,7 @@ Release 0.7
 2009-06-19:
 - Add -I command line switch for specifying module paths.
 - Add -M command line switch for loading modules (with 'require').
+- Add permanent history to the shell.
 
 2009-06-18:
 - Remove Blob and use Binary everywhere.
